@@ -68,6 +68,7 @@ import uk.gov.hmcts.reform.cwrdapi.servicebus.TopicPublisher;
 import uk.gov.hmcts.reform.cwrdapi.util.AuditStatus;
 import uk.gov.hmcts.reform.cwrdapi.util.CaseWorkerConstants;
 import uk.gov.hmcts.reform.cwrdapi.util.JsonFeignResponseUtil;
+import uk.gov.hmcts.reform.cwrdapi.util.RequestUtils;
 import uk.gov.hmcts.reform.cwrdapi.util.StaffProfileCreateUpdateUtil;
 
 import java.util.ArrayList;
@@ -207,7 +208,7 @@ public class StaffRefDataServiceImpl implements StaffRefDataService {
 
 
 
-    private void checkStaffProfileEmailAndSuspendFlag(StaffProfileCreationRequest profileRequest) {
+    public void checkStaffProfileEmailAndSuspendFlag(StaffProfileCreationRequest profileRequest) {
 
         // get all existing profile from db (used IN clause)
         CaseWorkerProfile dbCaseWorker = caseWorkerProfileRepo.findByEmailId(profileRequest.getEmailId().toLowerCase());
@@ -745,15 +746,20 @@ public class StaffRefDataServiceImpl implements StaffRefDataService {
 
 
         Optional<Object> resultResponse = validateAndGetResponseEntity(responseEntity);
-        if (resultResponse.isPresent() && resultResponse.get() instanceof UserProfileResponse profileResponse) {
-            if (nonNull(profileResponse.getIdamId())) {
-                return profileResponse;
-            }
-        }
-        return null;
+
+
+        return getProfileResponse(resultResponse);
     }
 
+    public UserProfileResponse getProfileResponse(Optional<Object> resultResponse) {
 
+        UserProfileResponse result = null;
+        if (resultResponse.isPresent() && resultResponse.get() instanceof UserProfileResponse profileResponse
+                && nonNull(profileResponse.getIdamId())) {
+            result = profileResponse;
+        }
+        return result;
+    }
 
     public CaseWorkerProfile updateStaffProfiles(StaffProfileCreationRequest cwUiRequest,
                                                        CaseWorkerProfile caseWorkerProfile) {
@@ -811,7 +817,7 @@ public class StaffRefDataServiceImpl implements StaffRefDataService {
                 deleteChildrenAndUpdateCwProfiles(updateCaseWorkerProfile, cwUiRequest);
 
 
-        if (isNotEmpty(profilesToBePersisted)) {
+        if (profilesToBePersisted != null) {
             processedCwProfiles = caseWorkerProfileRepo.save(profilesToBePersisted);
             log.info("{}::case worker profile inserted ", loggingComponentName);
         }
@@ -1097,7 +1103,7 @@ public class StaffRefDataServiceImpl implements StaffRefDataService {
 
     public List<Skill> getServiceSkillsData(String serviceCodeData) {
 
-        List<Skill> skills = new ArrayList<>();
+        List<Skill> skills = null;
         List<String> serviceCodes = getValidServiceCodes(serviceCodeData);
 
         if (!CollectionUtils.isEmpty(serviceCodes)) {
@@ -1116,8 +1122,8 @@ public class StaffRefDataServiceImpl implements StaffRefDataService {
             List<String> convertToList = convertToList(serviceCodeData);
 
             serviceCodes = convertToList.stream()
-                    .filter(serviceCode -> validateServiceCode(serviceCode))
-                    .collect(Collectors.toList());
+                    .filter(RequestUtils::validateServiceCode)
+                    .toList();
         }
 
         return serviceCodes;
